Include work order summary table in email.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -392,6 +392,10 @@
          "ObjectType": 3
       },
       {
+         "Name": "[dbo].[vw_InvoiceLineExport]",
+         "ObjectType": 3
+      },
+      {
          "Name": "[dbo].[vw_InvoicePreview]",
          "ObjectType": 3
       },
