Added authorization logic to PermissionsService (VerifyLoginAsync).

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -24,6 +24,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[AuthUser]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[BillingInformation]",
          "ObjectType": 0
       },
