Shifted email recipients to database instead of env. variables.

--- a/efpt.config.json
+++ b/efpt.config.json
@@ -368,6 +368,14 @@
          "ObjectType": 0
       },
       {
+         "Name": "[Settings].[EmailNotificationRecipient]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[Settings].[EmailNotificationType]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[vw_Billing_MileageAndTravel]",
          "ObjectType": 3
       },
